// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test CouponDto reject for when AMOUNT discount type object missing attributes 1`] = `
"An instance of CouponRequestDto has failed the validation:
 - property amountOff has failed the following constraints: min, isNumber 
"
`;

exports[`Test CouponDto reject for when PERCENT discount type object missing attributes 1`] = `
"An instance of CouponRequestDto has failed the validation:
 - property percentOff has failed the following constraints: max, min, isNumber 
"
`;
